--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -95,6 +95,7 @@
               onclick="simstate()"
               src="images/bluepausedull.svg"
               alt=""
+              title="Play/Pause"
               class="icons"
             />
             <span class="playPause">Pause</span>
@@ -102,7 +103,7 @@
           <li class="tool-list">
             <img
               id="rotationbutton"
-              onclick="rotstate()"
+              onclick="rotstate()" title="Rotate"
               src="images/bluecwdull.svg"
               alt=""
               class="icons"
@@ -111,7 +112,7 @@
           </li>
           <li class="tool-list">
             <img
-              id="rotationbutton"
+              id="rotationbutton" title="Trace"
               onclick="tracePlot()"
               src="images/tracebutton.svg"
               alt=""
@@ -141,7 +142,7 @@
                 <div class="var-div">
                   <div class="input-container">
                     <label for="ABspinner">AB</label>
-                    <input class="var-spinner" id="ABspinner" name="value" />
+                    <input class="var-spinner" type="number" id="ABspinner" name="value" />
                     <span>mm</span>
                   </div>
                   <div class="var-slider" id="ABslider"></div>
@@ -149,7 +150,7 @@
                 <div class="var-div">
                   <div class="input-container">
                     <label for="ACspinner">AC</label>
-                    <input class="var-spinner" id="ACspinner" name="value" />
+                    <input class="var-spinner" type="number" id="ACspinner" name="value" />
                     <span>mm</span>
                   </div>
                   <div class="var-slider" id="ACslider"></div>
@@ -157,7 +158,7 @@
                 <div class="var-div">
                   <div class="input-container">
                     <label for="thetaspinner">&theta;</label>
-                    <input class="var-spinner" id="thetaspinner" name="value" />
+                    <input class="var-spinner" type="number" id="thetaspinner" name="value" />
                     <span>&deg;</span>
                   </div>
                   <div class="var-slider" id="thetaslider"></div>
