--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -40,17 +40,17 @@
     <script defer src="js/script.js"></script>
   </head>
   <body onload="editcss();startsim();varinit();">
-    <div class="title-div-container">
-      <div class="title-div">
-        <div class="logo-div">
-          <a href="#"
-            ><img src="images/logo_nitk.png" alt="Logo" class="logo"
-          /></a>
-        </div>
-        <h1>Elliptical Trammel</h1>
-      </div>
-    </div>
     <div class="container">
+      <div class="title-div-container">
+        <div class="title-div">
+          <div class="logo-div">
+            <a href="#"
+              ><img src="images/logo_nitk.png" alt="Logo" class="logo"
+            /></a>
+          </div>
+          <h1>Elliptical Trammel</h1>
+        </div>
+      </div>
       <div class="sidebar">
         <ul class="tool-menu">
           <li class="tool-list">
@@ -103,7 +103,8 @@
           <li class="tool-list">
             <img
               id="rotationbutton"
-              onclick="rotstate()" title="Rotate"
+              onclick="rotstate()"
+              title="Rotate"
               src="images/bluecwdull.svg"
               alt=""
               class="icons"
@@ -112,7 +113,8 @@
           </li>
           <li class="tool-list">
             <img
-              id="rotationbutton" title="Trace"
+              id="rotationbutton"
+              title="Trace"
               onclick="tracePlot()"
               src="images/tracebutton.svg"
               alt=""
@@ -128,8 +130,15 @@
             <h3 class="task-title">Simulation</h3>
             <div class="canvas__div">
               <div id="canvas-container">
-                <canvas id="simscreen" height="400px" width="550px"></canvas>
+                <canvas
+                  id="simscreen"
+                  height="400px"
+                  width="550px"
+                  class="canvas"
+                ></canvas>
                 <!-- Region for comment / question prompts -->
+              </div>
+              <div class="comments">
                 <div id="commentboxleft"></div>
                 <div id="commentboxright"></div>
               </div>
@@ -142,7 +151,12 @@
                 <div class="var-div">
                   <div class="input-container">
                     <label for="ABspinner">AB</label>
-                    <input class="var-spinner" type="number" id="ABspinner" name="value" />
+                    <input
+                      class="var-spinner"
+                      type="number"
+                      id="ABspinner"
+                      name="value"
+                    />
                     <span>mm</span>
                   </div>
                   <div class="var-slider" id="ABslider"></div>
@@ -150,7 +164,12 @@
                 <div class="var-div">
                   <div class="input-container">
                     <label for="ACspinner">AC</label>
-                    <input class="var-spinner" type="number" id="ACspinner" name="value" />
+                    <input
+                      class="var-spinner"
+                      type="number"
+                      id="ACspinner"
+                      name="value"
+                    />
                     <span>mm</span>
                   </div>
                   <div class="var-slider" id="ACslider"></div>
@@ -158,7 +177,12 @@
                 <div class="var-div">
                   <div class="input-container">
                     <label for="thetaspinner">&theta;</label>
-                    <input class="var-spinner" type="number" id="thetaspinner" name="value" />
+                    <input
+                      class="var-spinner"
+                      type="number"
+                      id="thetaspinner"
+                      name="value"
+                    />
                     <span>&deg;</span>
                   </div>
                   <div class="var-slider" id="thetaslider"></div>
@@ -167,23 +191,9 @@
             </div>
           </div>
 
-          <div class="usercheck" hidden>
-            <input type="checkbox" id="trace" ></input> <p>Trace</p>
-         </div> 
-
           <!-- <div class="usercheck" hidden>
-            <label for="checkbox">
-              <input type="checkbox" id="trace" />
-              Trace Ellipse
-            </label>
-            <button
-              style="width: 30%; padding: 5px; border-radius: 5px"
-              id="resetparams"
-              onclick="ptx=[];pty=[];"
-            >
-              Clear Trace
-            </button>
-          </div> -->
+            <input type="checkbox" id="trace" ></input> <p>Trace</p>
+         </div>  -->
 
           <div class="main__task-div footer">
             <p>Copyright © SOLVE The Virtual Lab @ NITK Surathkal</p>
